<resources>
    <string name="app_name">NoteApp Lesson 6</string>
    <string name="note_form_name">Note</string>

    <string name="google_map_key">AIzaSyDulopmd_oeSQLVgkhR8ThhalVxuB4AG9c</string>

    <string name="about_us">About us</string>
    <string name="studio_name">Hamsters and Rabbits, Ltd</string>
    <string name="dev_email">feedback@gmail.ru</string>
    <string name="studio_address">Moscow, RUSSIA</string>
    <string name="bug_text">"oops. something went wrong"</string>

    <string name="user_slogan">What\'s up, doc!</string>
    <string name="user_email">user@gmail.ru</string>

    <string name="options_title">Options</string>
    <string name="actions_title">Select action:</string>

    <string name="hint_title">Title</string>
    <string name="hint_body">Text</string>
    <string name="hint_body_message">Inter your text</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tools">Tools</string>
    <string name="slideshow">Slideshow</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Contact us</string>
    <string name="feedback_header">"Feedback"</string>

    <string name="action_settings">Settings</string>

    <string name="action_create">Create</string>
    <string name="action_update">Update</string>
    <string name="action_view">View</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_last">Delete last note</string>
    <string name="action_delete_all">Clear list</string>

    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">Back</string>
    <string name="button_map">Go to map</string>

    <string name="place_not_found">Place not found</string>
    <string name="no_result">No notes available</string>
    <string name="no_weather">No weather data available</string>

</resources>
