<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

<LinearLayout
    style="@style/LayoutVerticalStyle">

    <LinearLayout
        style="@style/LayoutHorizontStyle">

        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/note_title_label"
            android:text="@string/hint_title"/>

        <EditText
            style="@style/TextViewStyle"
            android:id="@+id/note_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:maxLength="@integer/note_title_length"/>

    </LinearLayout>

    <EditText
        style="@style/TextViewStyle"
        android:id="@+id/note_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxLength="@integer/note_body_length"/>


    <LinearLayout
        style="@style/LayoutHorizontStyle">

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/button_save"
            android:text="@string/button_save"/>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/button_cancel"
            android:text="@string/button_cancel"/>

    </LinearLayout>

</LinearLayout>

</ScrollView>
